optimized responses, fixed bug with it not catching empty response